correct overflow in speaker images
to ensure correct responsive views

--- a/source/stylesheets/components/_speakers.sass
+++ b/source/stylesheets/components/_speakers.sass
@@ -22,9 +22,11 @@
   margin-bottom: 20px
   @include grid(3, false, 2, 2)
   padding: 0
+  overflow: hidden
   &:hover
     background: $light-green
     cursor: pointer
+    overflow: visible
     .speakers--twitter
       display: block
 
